[package]
name = "mill-io"
version = "1.0.2"
edition = "2021"
authors = ["Citadel-tech", "Mohamed Emad <hulxxv@gmail.com>"]
description = "A lightweight event loop library for Rust that provides efficient non-blocking I/O management without relying on heavyweight async runtimes."
documentation = "https://docs.rs/mill-io"
homepage = "https://github.com/citadel-tech/Event-Loop"
repository = "https://github.com/citadel-tech/Event-Loop"
readme = "README.md"
license = "Apache-2.0"
keywords = ["io", "event-loop", "mio", "networking", "reactor"]
categories = ["network-programming", "asynchronous", "concurrency"]
include = [
    "src/**/*",
    "examples/**/*",
    "docs/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]
rust-version = "1.70"

[dependencies]
lockfree = "0.5.1"
mio = { version = "1.1.0", features = ["os-poll", "net"] }

[dev-dependencies]
serde ={ version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"

[features]
default = []
net = []
unstable-mpmc = []
unstable = ["unstable-mpmc"]

[[example]]
name = "tcp_echo_server"
required-features = ["net"]

[[example]]
name = "tcp_jsonrpc_server"
required-features = ["net"]

[[example]]
name = "tcp_http_server"
required-features = ["net"]

[target.'cfg(target_os = "linux")'.dev-dependencies]
inotify = "0.10"
