[workspace]
members = ["mill-io", "mill-net"]
resolver = "2"

[workspace.package]
authors = ["Citadel-tech", "Mohamed Emad "]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.70"

[workspace.dependencies]
mio = { version = "1.1.0", features = ["os-poll", "net"] }
lock_freedom = "0.1.1"

mill-io = { path = "mill-io" }
mill-net = { path = "mill-net" }