[workspace]
members = ["mill-io", "mill-net"]
resolver = "2"

[workspace.package]
version = "2.0.1"
authors = ["Citadel-tech", "Mohamed Emad"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.70"

[workspace.dependencies]
mio = { version = "1.1.0", features = ["os-poll", "net"] }
lock_freedom = "0.1.1"
criterion = { version = "0.5.1", features = ["html_reports"] }
parking_lot = "0.12"

mill-io = { path = "mill-io" }
mill-net = { path = "mill-net" }
