[package]
name = "mill-io"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "A lightweight event loop library for Rust providing efficient non-blocking I/O management"
documentation = "https://docs.rs/mill-io"
homepage = "https://github.com/citadel-tech/mill-io"
repository = "https://github.com/citadel-tech/mill-io"
readme = "README.md"
keywords = ["io", "event-loop", "mio", "reactor", "async"]
categories = ["network-programming", "asynchronous", "concurrency"]

[dependencies]
mio.workspace = true
lock_freedom.workspace = true

[dev-dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
mill-net = { path = "../mill-net" }

[features]
default = []
unstable-mpmc = []
unstable = ["unstable-mpmc"]

[target.'cfg(target_os = "linux")'.dev-dependencies]
inotify = "0.10"